[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quic-lab-py"
version = "0.1.0"
description = "QUIC/HTTP3 experiments and visualization tools"
requires-python = ">=3.9"
dependencies = [
    "aioquic>=1.2.0",
    "fastapi>=0.135.1",
    "hypercorn>=0.17.3",
    "httpx[http2]>=0.28.1",
    "pyyaml>=6.0",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
